Final version of my halloween project

--- a/halloween/invitationcard.html
+++ b/halloween/invitationcard.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <link rel="stylesheet" href="estilos/invitationCard.css" />
     <style>
         @font-face {
                    font-family:gothicHandDirty;
@@ -10,33 +11,7 @@
             font-family:darkGhost;
             src: url(fuentes/darkGhost.otf);
         }
-        
-        body {
-            background-color:rgba(38,44,58,1);
-        }
-        #chesire{
-        position:absolute;
-        margin-left:23%;
-        top:0;
-        }
-        #spiderweb {
-        position:absolute;
-        margin-left:100px;
-        top:1;    
-        }
-        #spiderweb2 {
-        position:absolute;
-        top:1;
-        margin-left:600px;    
-        }
-        #bodyOfInvitation {
-        position:absolute;
-        top:580px;
-        left:350px;
-        width:700px;
-        font-family:darkGhost;
-        }
-    </style>
+        </style>
     <meta charset="UTF-8">
     <title>Invitation. Pablo Luis Molina Blanes. 1º DAM</title>
 </head>
