Made is accesible to the hosting of GitHub

--- a/halloween/index.html
+++ b/halloween/index.html
@@ -31,8 +31,8 @@
         Your browser does not support the audio element.      
 </audio>
 <div id="wrapper">
-<img src="imagenes/darkWideRoomEdited.png" alt="Scary wide dark room" style="position:relative;" id="wholeRoom" onmouseover="showBackground()" onmousemove="findCoordinates(event)" onmouseout="hideBackground()"/>
-<img src="imagenes/wideRoomEdited.png" alt="Scary wide illuminated room" id="illuminatedBackground" onmouseover="showBackground()" onmouseout="hideBackground()"/>
+<img src="imagenes/darkWideRoomEdited.png" alt="Scary wide dark room, can fail with screen readers" style="position:relative;" id="wholeRoom" onmouseover="showBackground()" onmousemove="findCoordinates(event)" onmouseout="hideBackground()"/>
+<img src="imagenes/wideRoomEdited.png" alt="Scary wide illuminated room, can fail with screen readers" id="illuminatedBackground" onmouseover="showBackground()" onmouseout="hideBackground()"/>
 <p style="position:absolute;top:0px; color:white;" id="message">Don't point your lantern to the front...</p>
 </div>
 </body>
