--- a/halloween/invitationcard.html
+++ b/halloween/invitationcard.html
@@ -16,9 +16,9 @@
     <title>Invitation. Pablo Luis Molina Blanes. 1º DAM</title>
 </head>
 <body>
-<img src="imagenes/chesire.jpg" id="chesire"/>
-<img src="imagenes/spiderweb.png" id="spiderweb" />
-<img src="imagenes/spiderweb.png" id="spiderweb2" />
+<img src="imagenes/chesire.jpg" alt="Smiley scary face" id="chesire"/>
+<img src="imagenes/spiderweb.png" alt="Spiderweb" id="spiderweb" />
+<img src="imagenes/spiderweb.png" alt="Spiderweb" id="spiderweb2" />
 <h1 style="bottom:50px;position:absolute;right:425px;font-size:300%; font-family:gothicHandDirty;">Halloween Party Invitation!</h1>
 <div id="bodyOfInvitation">
         <p>If you are here, you must have had a really scary scare! We sort of blame you, for pointing that light.</p>
@@ -27,7 +27,7 @@
         <h2>What will there be?</h2>
         <p>For starters, a disguise party, a must in all halloween parties. We will have also a good location (an abandoned cinema, in Calle Limonar, 23, Malaga, where a big abandoned building is in, the one where the game was played out in, by the way, this is the why of that green screen), a catering, a horror movie theater, and perks for those who come in the earliest (the 10 first get free entry!)</p>
         <p>Would you care to go and meet us? Thank you a bunch!</p>
-        <button type="button" onclick="location.href = 'index.html'" title="boo">Mind playing again?</button>
+        <button type="button" alt="Mind playing again?" onclick="location.href = 'index.html'" title="boo">Mind playing again?</button>
         <br />
         <br />
         <br />
